Fix spacing between tts sidebar buttons

--- a/src/frontend/scss/site/_sidebar.scss
+++ b/src/frontend/scss/site/_sidebar.scss
@@ -146,7 +146,7 @@
     flex-direction: column;
     align-items: center;
 
-    .btn + .btn {
+    &:not(.sidebar-tts) .btn + .btn {
         margin-top: .75rem;
     }
 }
